# ModShot-mkxp-z

./: README.md  meson.build  modshot.json
binding/: audio-binding.cpp  binding-mri.cpp  binding-util.cpp  bitmap-binding.cpp  compiled-shader-binding.cpp  etc-binding-util.h  etc-binding.cpp  font-binding.cpp  graphics-binding.cpp  input-binding.cpp  meson.build  modshot-binding.cpp  niko-binding.cpp  oneshot-binding.cpp  plane-binding.cpp  shadable-element-binding.h  shader-binding.cpp  sprite-binding.cpp  steam-binding.cpp  tilemap-binding.cpp  viewport-binding.cpp  wallpaper-binding.cpp
linux/: AppRun  Makefile  install.sh  make_appimg.sh  meson.build  modshot.desktop  vars.sh
macos/: Info.plist
macos/Dependencies/: dependencies.make
macos/ModShot.xcodeproj/: project.pbxproj
macos/dependencies/: common.make
macos/mkxp-z.xcodeproj/: project.pbxproj
macos/views/: SettingsMenuController.mm
scripts/utility/: msys-detect.rb
shader/: meson.build  rb_simple.vert
src/: config.cpp  config.h  eventthread.cpp  eventthread.h  main.cpp  meson.build  settingsmenu.cpp  sharedstate.cpp  sharedstate.h
src/audio/: audio.cpp  audio.h
src/display/: bitmap.cpp  bitmap.h  font.cpp  graphics.cpp  graphics.h  plane.cpp  plane.h  rb_shader.cpp  rb_shader.h  sprite.cpp  sprite.h  tilemap.cpp  tilemap.h  viewport.cpp  viewport.h
src/etc/: etc-internal.h
src/input/: input.cpp  input.h  keybindings.cpp  keybindings.h
src/oneshot/: i18n.cpp  (+2 more)
windows/: Makefile  meson.build  modshot.manifest  resource-steamshim.rc  resource.h  resource.rc  steamshim.manifest  vars.sh
(+16 files in other folders)
